<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_cortex</name>
  <version>0.0.0</version>
  <description>Robocomp cortex</description>
  <maintainer email="orensbruli@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>libgsl</buildtool_depend>
  <buildtool_depend>libopenscenegraph</buildtool_depend>
  <buildtool_depend>libqt5-opengl-dev</buildtool_depend>
  <buildtool_depend>libqglviewer-dev-qt5</buildtool_depend>
  <buildtool_depend>fastrtps_cmake_module</buildtool_depend>
  <buildtool_depend>fastrtps</buildtool_depend>
  <buildtool_depend>eigen</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>  <!-- ExternalProject in cmake -->
  <buildtool_depend>ca-certificates</buildtool_depend> <!-- https for git -->


<!--  <test_depend>ament_lint_auto</test_depend>-->
<!--  <test_depend>ament_lint_common</test_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
